[package]
name = "net-route-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "net_route_rs_lib"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dns-lookup = "2.0.4"
encoding_rs = "0.8.35"
ipconfig = "0.3.2"
network-interface = "2.0.0"
prettytable-rs = "0.10.0"
test-case = "3.3.1"
winroute = "0.2.1"
